[project]
name = "cherry-openai-proxy"
version = "0.1.0"
description = "OpenAI-compatible proxy for Cherry Studio chat completions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["flask>=3.1.3", "httpx[http2]>=0.28.1", "python-dotenv>=1.2.2"]

[dependency-groups]
dev = ["pytest>=9.0.3"]


[tool.ruff]
line-length = 200

[tool.ruff.format]
quote-style = "single"
